new files again

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<<<<<<< HEAD
 <html>
  <head>
  <title>Welcome!</title>
  </head>
  <body>
+ <div style="background: red">Welcome</div>
+ <div style="float: right">
+ Home | Contact | CV | Projects
+ </div>
+
 <p>Hello and welcome to my site!</p>
 <p style="font-weight: bold">This site is likely the best place to be</p>
 <img src="images/puffin.jpg">
+<p>This word is <span style="color: red">red</span>.</p>
+
+</div>
  </body>
 </html>
-=======
-
->>>>>>> 5e740852e0c48828ef18828b13a0f06357b7bf0b
